Added Portfolio.get_value_by_account
