# nummus/web/spec/api.yaml
@@ -696,7 +696,6 @@ paths:
   #     parameters:
   #       - $ref: "#/components/parameters/Start"
   #       - $ref: "#/components/parameters/End"
-  #       - $ref: "#/components/parameters/SortByValue"
   #     responses:
   #       "200":
   #         description: Successful operation
@@ -785,7 +784,7 @@ paths:
       parameters:
         - $ref: "#/components/parameters/Start"
         - $ref: "#/components/parameters/End"
-        - $ref: "#/components/parameters/AccountCategoryExplicit"
+        - $ref: "#/components/parameters/AccountCategory"
       responses:
         "200":
           description: Successful operation
@@ -806,45 +805,46 @@ paths:
           description: Malformed request
         "422":
           description: Invalid parameter supplied
-  # /portfolio/value-by-account:
-  #   get:
-  #     tags:
-  #       - Portfolio
-  #       - Account
-  #     summary: Get value of Portfolio categorized by Account
-  #     description: Same data as multiple calls to /account/{accountUUID}/value
-  #     operationId: nummus.web.controller_portfolio.get_value_by_account
-  #     parameters:
-  #       - $ref: "#/components/parameters/Start"
-  #       - $ref: "#/components/parameters/End"
-  #       - $ref: "#/components/parameters/SortByValue"
-  #       - $ref: "#/components/parameters/AccountCategory"
-  #     responses:
-  #       "200":
-  #         description: Successful operation
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: object
-  #               properties:
-  #                 total:
-  #                   $ref: "#/components/schemas/DoubleList"
-  #                 accounts:
-  #                   description: Value by individual Accounts
-  #                   type: object
-  #                   additionalProperties:
-  #                     $ref: "#/components/schemas/DoubleList"
-  #                   example:
-  #                     3fa85f64-5717-4562-b3fc-2c963f66afa6:
-  #                       - 100.0
-  #                       - 10687.2
-  #                     e22b7880-acd7-4355-b9ea-1b0e9f174d1d:
-  #                       - 10.0
-  #                       - 1687.2
-  #                 dates:
-  #                   $ref: "#/components/schemas/Dates"
-  #       "400":
-  #         description: Invalid parameter supplied
+  /portfolio/value-by-account:
+    get:
+      tags:
+        - Portfolio
+        - Account
+      summary: Get value of Portfolio categorized by Account
+      description: Same data as multiple calls to /account/{accountUUID}/value
+      operationId: nummus.web.controller_portfolio.get_value_by_account
+      parameters:
+        - $ref: "#/components/parameters/Start"
+        - $ref: "#/components/parameters/End"
+        - $ref: "#/components/parameters/AccountCategory"
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  total:
+                    $ref: "#/components/schemas/DoubleList"
+                  accounts:
+                    description: Value by individual Accounts
+                    type: object
+                    additionalProperties:
+                      $ref: "#/components/schemas/DoubleList"
+                    example:
+                      3fa85f64-5717-4562-b3fc-2c963f66afa6:
+                        - 100.0
+                        - 10687.2
+                      e22b7880-acd7-4355-b9ea-1b0e9f174d1d:
+                        - 10.0
+                        - 1687.2
+                  dates:
+                    $ref: "#/components/schemas/Dates"
+        "400":
+          description: Malformed request
+        "422":
+          description: Invalid parameter supplied
   # /portfolio/value-by-category:
   #   get:
   #     tags:
@@ -858,7 +858,6 @@ paths:
   #     parameters:
   #       - $ref: "#/components/parameters/Start"
   #       - $ref: "#/components/parameters/End"
-  #       - $ref: "#/components/parameters/SortByValue"
   #     responses:
   #       "200":
   #         description: Successful operation
@@ -902,7 +901,6 @@ paths:
   #     parameters:
   #       - $ref: "#/components/parameters/Start"
   #       - $ref: "#/components/parameters/End"
-  #       - $ref: "#/components/parameters/SortByValue"
   #       - $ref: "#/components/parameters/AssetCategory"
   #     responses:
   #       "200":
@@ -1089,18 +1087,6 @@ components:
         enum:
           - oldest
           - newest
-    SortByValue:
-      name: sort
-      in: query
-      description: >-
-        Sort data by value, largest to smallest either by the latest or average
-        value
-      schema:
-        type: string
-        default: latest
-        enum:
-          - latest
-          - average
     Limit:
       name: limit
       in: query
@@ -1483,8 +1469,7 @@ components:
         - 20
     DoubleListBudgeted:
       description: >-
-        List of floating point values per Budget category. Keys might be sorted
-        depending on use
+        List of floating point values per Budget category
       type: object
       required:
         - home
